Fixed unusable sidebar on landscape mode on mobile

--- a/src/less/Layout/header.less
+++ b/src/less/Layout/header.less
@@ -3,6 +3,8 @@
   right: 0;
   text-align: center;
   width: 14em;
+  height: 100%;
+  overflow-y: auto;
   padding: 2em;
   transition: all 500ms ease;
 }
