--- a/src/less/Layout/nav.less
+++ b/src/less/Layout/nav.less
@@ -1,5 +1,6 @@
 #menu {
     padding: 1em;
+    margin-bottom: 2em;
 }
 #menu > a {
     display: block;
